# PrincipiosEPraticasDeProgramacaoComCpp

./: .gitignore  CMakeLists.txt
goodbye_cruel_world/: CMakeLists.txt
miles_2_Kilometers/: CMakeLists.txt  README.md
src/capitulo_04/: CMakeLists.txt
src/capitulo_04/exercicios/e02/: CMakeLists.txt  README.md
src/capitulo_04/exercicios/e03/: CMakeLists.txt
src/capitulo_04/exercicios/e04/: CMakeLists.txt  README.md  c04e04.cpp
src/capitulo_04/exercicios/e05/: CMakeLists.txt  README.md  c04e05.cpp
src/capitulo_04/exercicios/e06/: CMakeLists.txt  README.md  c04e06.cpp
src/capitulo_04/exercicios/e07/: CMakeLists.txt
src/capitulo_04/exercicios/e08/: CMakeLists.txt  README.md  c04e08.cpp
src/capitulo_04/exercicios/e09/: CMakeLists.txt  README.md  c04e09.cpp
src/capitulo_04/exercicios/e10/: CMakeLists.txt
src/capitulo_04/exercicios/e11/: CMakeLists.txt
src/capitulo_04/exercicios/e12/: CMakeLists.txt  README.md  c04e12.cpp
src/capitulo_04/exercicios/e13/: CMakeLists.txt  README.md  c04e13.cpp
src/capitulo_04/exercicios/e14/: CMakeLists.txt  README.md  c04e14.cpp
src/capitulo_04/exercicios/e15/: CMakeLists.txt  c04e15.cpp
src/capitulo_04/exercicios/e16/: CMakeLists.txt  README.md  c04e16.cpp
src/capitulo_04/exercicios/e17/: CMakeLists.txt
src/capitulo_04/exercicios/e18/: CMakeLists.txt
src/capitulo_04/exercicios/e19/: CMakeLists.txt
src/capitulo_04/exercicios/e20/: CMakeLists.txt  c04e21.cpp
src/capitulo_04/exercicios/e21/: CMakeLists.txt  README.md  c4e21.cpp
src/capitulo_04/pratica/p01/: CMakeLists.txt
src/capitulo_04/pratica/p02/: CMakeLists.txt
src/capitulo_04/pratica/p03/: CMakeLists.txt  README.md
src/capitulo_04/pratica/p04/: CMakeLists.txt
src/capitulo_04/pratica/p05/: CMakeLists.txt  c04p05.cpp
src/capitulo_04/pratica/p06/: CMakeLists.txt  README.md  c04p06.cpp
src/capitulo_04/pratica/p07/: CMakeLists.txt
src/capitulo_04/pratica/p08/: CMakeLists.txt  README.md
src/capitulo_04/pratica/p09/: CMakeLists.txt  README.md
src/capitulo_04/pratica/p10/: CMakeLists.txt
src/capitulo_04/pratica/p11/: CMakeLists.txt
src/capitulo_04/tente_isto/t01/: CMakeLists.txt
src/capitulo_04/tente_isto/t02/: CMakeLists.txt
src/capitulo_04/tente_isto/t03/: CMakeLists.txt  README.md  c04t03.cpp
src/capitulo_04/tente_isto/t04/: CMakeLists.txt  c04t04.cpp
src/capitulo_04/tente_isto/t05/: CMakeLists.txt  README.md  c04t05.cpp
src/capitulo_04/tente_isto/t06/: CMakeLists.txt  README.md
src/capitulo_05/: CMakeLists.txt
src/capitulo_05/exercicios/e02/: CMakeLists.txt  README.md  c05e02.cpp
src/capitulo_05/exercicios/e03/: CMakeLists.txt  README.md  c05e03.cpp
src/capitulo_05/exercicios/e04/: CMakeLists.txt  README.md  c05e04.cpp
src/capitulo_05/exercicios/e05/: CMakeLists.txt  README.md  c05e05.cpp
src/capitulo_05/exercicios/e06/: CMakeLists.txt  README.md  c05e06.cpp
src/capitulo_05/exercicios/e07/: CMakeLists.txt  README.md  c05e07.cpp
src/capitulo_05/exercicios/e08/: CMakeLists.txt  README.md  c05e08.cpp
src/capitulo_05/exercicios/e09/: CMakeLists.txt  README.md  c05e09.cpp
src/capitulo_05/exercicios/e10/: CMakeLists.txt  README.md  c05e10.cpp
src/capitulo_05/exercicios/e11/: CMakeLists.txt  README.md  c05e11.cpp
src/capitulo_05/exercicios/e12/: CMakeLists.txt  README.md  c05e12.cpp
src/capitulo_05/exercicios/e13/: CMakeLists.txt  README.md  c05e13.cpp
src/capitulo_05/exercicios/e14/: CMakeLists.txt  README.md  c05e14.cpp
src/capitulo_05/pratica/: README.md
src/capitulo_05/pratica/p01/: CMakeLists.txt  c05p01.cpp
src/capitulo_05/pratica/p02/: CMakeLists.txt  c05p02.cpp
src/capitulo_05/pratica/p03/: CMakeLists.txt  c05p03.cpp
src/capitulo_05/pratica/p04/: CMakeLists.txt  c05p04.cpp
src/capitulo_05/pratica/p05/: CMakeLists.txt  c05p05.cpp
src/capitulo_05/pratica/p06/: CMakeLists.txt  c05p06.cpp
src/capitulo_05/pratica/p07/: CMakeLists.txt  c05p07.cpp
src/capitulo_05/pratica/p08/: CMakeLists.txt  c05p08.cpp
src/capitulo_05/pratica/p09/: CMakeLists.txt  c05p09.cpp
src/capitulo_05/pratica/p10/: CMakeLists.txt  c05p10.cpp
src/capitulo_05/pratica/p11/: CMakeLists.txt  c05p11.cpp
src/capitulo_05/pratica/p12/: CMakeLists.txt  c05p12.cpp
src/capitulo_05/pratica/p13/: CMakeLists.txt  c05p13.cpp
src/capitulo_05/pratica/p14/: CMakeLists.txt  c05p14.cpp
src/capitulo_05/pratica/p15/: CMakeLists.txt  c05p15.cpp
src/capitulo_05/pratica/p16/: CMakeLists.txt  c05p16.cpp
src/capitulo_05/pratica/p17/: CMakeLists.txt  c05p17.cpp
src/capitulo_05/pratica/p18/: CMakeLists.txt  c05p18.cpp
src/capitulo_05/pratica/p19/: CMakeLists.txt  c05p19.cpp
src/capitulo_05/pratica/p20/: CMakeLists.txt  c05p20.cpp
src/capitulo_05/pratica/p21/: CMakeLists.txt  c05p21.cpp
src/capitulo_05/pratica/p22/: CMakeLists.txt  c05p22.cpp
src/capitulo_05/pratica/p23/: CMakeLists.txt  c05p23.cpp
src/capitulo_05/pratica/p24/: CMakeLists.txt  c05p24.cpp
src/capitulo_05/pratica/p25/: CMakeLists.txt  c05p25.cpp
src/capitulo_05/tente_isto/t01/: CMakeLists.txt  README.md  c05t01.cpp
src/capitulo_05/tente_isto/t02/: CMakeLists.txt  README.md  c05t02.cpp
src/capitulo_05/tente_isto/t03/: CMakeLists.txt  README.md  c05t03.cpp
src/capitulo_05/tente_isto/t04/: CMakeLists.txt  README.md  c05t04.cpp
src/capitulo_05/tente_isto/t05/: CMakeLists.txt  README.md  c05t05.cpp
src/capitulo_05/tente_isto/t06/: CMakeLists.txt  README.md  c05t06.cpp
src/capitulo_06/: CMakeLists.txt
src/capitulo_06/exercicios/e02/: CMakeLists.txt  README.md  c06e02.cpp
src/capitulo_06/exercicios/e03/: CMakeLists.txt  README.md  c06e03.cpp
src/capitulo_06/exercicios/e04/: CMakeLists.txt  README.md  c06e04.cpp
src/capitulo_06/exercicios/e05/: CMakeLists.txt  README.md  c06e05.cpp
src/capitulo_06/exercicios/e06/: CMakeLists.txt  README.md  c06e06.cpp
src/capitulo_06/exercicios/e07/: CMakeLists.txt  README.md  c06e07.cpp
src/capitulo_06/exercicios/e08/: CMakeLists.txt  README.md  c06e08.cpp
src/capitulo_06/exercicios/e09/: CMakeLists.txt  README.md  c06e09.cpp
src/capitulo_4/: CMakeLists.txt
src/capitulo_4/pratica/p3/: c4p3.cpp  (+1 more)
(+161 files in other folders)
