cmake_minimum_required(VERSION 3.12.0)

project(capitulo_04)

add_subdirectory(tente_isto/t01)
add_subdirectory(tente_isto/t02)
add_subdirectory(tente_isto/t03)
add_subdirectory(tente_isto/t04)
add_subdirectory(tente_isto/t05)
add_subdirectory(tente_isto/t06)

add_subdirectory(pratica/p01)
add_subdirectory(pratica/p02)
add_subdirectory(pratica/p03)
add_subdirectory(pratica/p04)
add_subdirectory(pratica/p05)
add_subdirectory(pratica/p06)
add_subdirectory(pratica/p07)
add_subdirectory(pratica/p08)
add_subdirectory(pratica/p09)
add_subdirectory(pratica/p10)
add_subdirectory(pratica/p11)

add_subdirectory(exercicios/e02)
add_subdirectory(exercicios/e03)
add_subdirectory(exercicios/e04)
add_subdirectory(exercicios/e05)
add_subdirectory(exercicios/e06)
add_subdirectory(exercicios/e07)
add_subdirectory(exercicios/e08)
add_subdirectory(exercicios/e09)
add_subdirectory(exercicios/e10)
add_subdirectory(exercicios/e11)
add_subdirectory(exercicios/e12)
add_subdirectory(exercicios/e13)
add_subdirectory(exercicios/e14)
add_subdirectory(exercicios/e15)
add_subdirectory(exercicios/e16)
add_subdirectory(exercicios/e17)
add_subdirectory(exercicios/e18)
add_subdirectory(exercicios/e19)
add_subdirectory(exercicios/e20)
add_subdirectory(exercicios/e21)