cmake_minimum_required(VERSION 3.12.0)

project(capitulo_05)

add_subdirectory(tente_isto/t01)
add_subdirectory(tente_isto/t02)
add_subdirectory(tente_isto/t03)
add_subdirectory(tente_isto/t04)
add_subdirectory(tente_isto/t05)
add_subdirectory(tente_isto/t06)

add_subdirectory(pratica/p01)
add_subdirectory(pratica/p02)
add_subdirectory(pratica/p03)
add_subdirectory(pratica/p04)
add_subdirectory(pratica/p05)
add_subdirectory(pratica/p06)
add_subdirectory(pratica/p07)
add_subdirectory(pratica/p08)
add_subdirectory(pratica/p09)
add_subdirectory(pratica/p10)
add_subdirectory(pratica/p11)
add_subdirectory(pratica/p12)
add_subdirectory(pratica/p13)
add_subdirectory(pratica/p14)
add_subdirectory(pratica/p15)
add_subdirectory(pratica/p16)
add_subdirectory(pratica/p17)
add_subdirectory(pratica/p18)
add_subdirectory(pratica/p19)
add_subdirectory(pratica/p20)
add_subdirectory(pratica/p21)
add_subdirectory(pratica/p22)
add_subdirectory(pratica/p23)
add_subdirectory(pratica/p24)
add_subdirectory(pratica/p25)

add_subdirectory(exercicios/e02)
add_subdirectory(exercicios/e03)
add_subdirectory(exercicios/e04)
add_subdirectory(exercicios/e05)
add_subdirectory(exercicios/e06)
add_subdirectory(exercicios/e07)
add_subdirectory(exercicios/e08)
add_subdirectory(exercicios/e09)