cmake_minimum_required(VERSION 3.12.0)

project(capitulo_06)

add_subdirectory(tente_isto/t02)
add_subdirectory(tente_isto/t03)

add_subdirectory(pratica/p01)

add_subdirectory(exercicios/e02)
add_subdirectory(exercicios/e03)
add_subdirectory(exercicios/e04)
add_subdirectory(exercicios/e05)
add_subdirectory(exercicios/e06)
add_subdirectory(exercicios/e07)
add_subdirectory(exercicios/e08)
add_subdirectory(exercicios/e09)
add_subdirectory(exercicios/e10)