cmake_minimum_required(VERSION 3.12.0)

project(Capitulo4)

add_subdirectory(tente_isto/t1)
add_subdirectory(tente_isto/t2)
add_subdirectory(tente_isto/t3)
add_subdirectory(tente_isto/t4)
add_subdirectory(tente_isto/t5)
add_subdirectory(tente_isto/t6)

add_subdirectory(practice/p1)
add_subdirectory(practice/p2)
add_subdirectory(practice/p3)
add_subdirectory(practice/p4)
add_subdirectory(practice/p5)
add_subdirectory(practice/p6)
add_subdirectory(practice/p7)
add_subdirectory(practice/p8)