cmake_minimum_required(VERSION 3.12.0)

project(Capitulo4)

add_subdirectory(tente_isto/t1)
add_subdirectory(tente_isto/t2)
add_subdirectory(tente_isto/t3)
add_subdirectory(tente_isto/t4)
add_subdirectory(tente_isto/t5)
add_subdirectory(tente_isto/t6)

add_subdirectory(pratica/p1)
add_subdirectory(pratica/p2)
add_subdirectory(pratica/p3)
add_subdirectory(pratica/p4)
add_subdirectory(pratica/p5)
add_subdirectory(pratica/p6)
add_subdirectory(pratica/p7)
add_subdirectory(pratica/p8)
add_subdirectory(pratica/p9)
add_subdirectory(pratica/p10)
add_subdirectory(pratica/p11)

add_subdirectory(exercicios/e2)
add_subdirectory(exercicios/e3)
add_subdirectory(exercicios/e4)
add_subdirectory(exercicios/e5)
add_subdirectory(exercicios/e6)
add_subdirectory(exercicios/e7)
add_subdirectory(exercicios/e8)
add_subdirectory(exercicios/e9)
add_subdirectory(exercicios/e10)
add_subdirectory(exercicios/e11)
add_subdirectory(exercicios/e12)
add_subdirectory(exercicios/e13)
add_subdirectory(exercicios/e14)